# oop

./: CMakeLists.txt
Lab1/: CMakeLists.txt  main.cpp
Lab1/funk/: funk.cpp
Lab1/include/: funk.h
Lab1/test/: test.cpp
